[gd_scene load_steps=18 format=3 uid="uid://b5wvxalrbrfpk"]

[ext_resource type="Texture2D" uid="uid://dftgrrlty2cp5" path="res://assets/ui/settings-background.png" id="1_bg"]
[ext_resource type="Script" uid="uid://demhhqbnlvfhu" path="res://src/ui/components/profile/profile_editor.gd" id="2_script"]
[ext_resource type="Script" uid="uid://bhwm0bl5qoiph" path="res://src/ui/components/utils/safe_margin_container.gd" id="3_safe"]
[ext_resource type="Texture2D" uid="uid://bfdgcten8x433" path="res://src/ui/components/discover/icons/back.svg" id="4_back"]
[ext_resource type="FontFile" uid="uid://hqi2efd5kd17" path="res://assets/themes/fonts/inter/Inter-Bold.ttf" id="5_bold"]
[ext_resource type="LabelSettings" uid="uid://casqox4mhcv7s" path="res://assets/themes/menu_title_label_settings.tres" id="6_menu"]
[ext_resource type="PackedScene" uid="uid://c6jl46ahx31ud" path="res://src/ui/components/profile_picture/profile_picture.tscn" id="7_pic"]
[ext_resource type="PackedScene" uid="uid://bhmbr0xh4h188" path="res://src/ui/components/dropdown_list/dropdown_list.tscn" id="8_dd"]
[ext_resource type="PackedScene" uid="uid://fc5fxcmfp4pq" path="res://src/ui/components/dcl_line_edit.tscn" id="9_edit"]
[ext_resource type="Theme" uid="uid://bn7q4ap7m5gdu" path="res://assets/themes/dcl_theme.tres" id="10_theme"]
[ext_resource type="FontFile" uid="uid://b1jo174eyscej" path="res://assets/themes/fonts/inter/inter_600.ttf" id="11_semi"]
[ext_resource type="LabelSettings" uid="uid://ct0id5dvd563e" path="res://assets/themes/title_settings.tres" id="12_title"]
[ext_resource type="PackedScene" path="res://src/ui/components/profile/profile_links.tscn" id="13_eu3qc"]
[ext_resource type="FontFile" uid="uid://di6yadh02vrla" path="res://assets/themes/fonts/inter/Inter-Regular.ttf" id="13_reg"]
[ext_resource type="LabelSettings" uid="uid://c8gi64m66smxl" path="res://assets/themes/description_settings.tres" id="14_desc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0s0um"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xwcb6"]
bg_color = Color(0.2784314, 0, 0.44313726, 1)

[node name="ProfileEditor" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_bg")
expand_mode = 1
stretch_mode = 6
script = ExtResource("2_script")
metadata/mobile_preview_orientation = "portrait"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SafeTopMarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 48
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 20
script = ExtResource("3_safe")
use_left = false
use_right = false
use_bottom = false

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/SafeTopMarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/SafeTopMarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 14

[node name="Button_BackToExplorer" type="Button" parent="VBoxContainer/SafeTopMarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
focus_mode = 0
icon = ExtResource("4_back")
flat = true
expand_icon = true

[node name="Label_EditProfileTitle" type="Label" parent="VBoxContainer/SafeTopMarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("5_bold")
theme_override_font_sizes/font_size = 28
text = "Edit Profile"
label_settings = ExtResource("6_menu")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 48
theme_override_constants/margin_right = 48

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 32
theme_override_constants/margin_bottom = 32

[node name="ProfilePicture" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/MarginContainer" instance=ExtResource("7_pic")]
unique_name_in_owner = true
custom_minimum_size = Vector2(175, 175)
layout_mode = 2
picture_size = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Label_Title" type="Label" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("11_semi")
theme_override_font_sizes/font_size = 14
text = "Username"
label_settings = ExtResource("12_title")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxEmpty_0s0um")

[node name="DclLineEdit_Username" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/VBoxContainer" instance=ExtResource("9_edit")]
unique_name_in_owner = true
layout_mode = 2
is_optional = true
hint = "Username"
show_tag = true

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Label_Title" type="Label" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("11_semi")
theme_override_font_sizes/font_size = 14
text = "Description"
label_settings = ExtResource("12_title")

[node name="Label_Description" type="Label" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_fonts/font = ExtResource("13_reg")
theme_override_font_sizes/font_size = 12
text = "Describe yourself in a few words."
label_settings = ExtResource("14_desc")
text_overrun_behavior = 4

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxEmpty_0s0um")

[node name="DclLineEdit_Description" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/VBoxContainer2" instance=ExtResource("9_edit")]
unique_name_in_owner = true
layout_mode = 2
character_limit = 400
allow_edge_spaces = true
allow_special_characters = true
is_optional = true
hint = "Description"

[node name="ProfileLinks" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer" instance=ExtResource("13_eu3qc")]
unique_name_in_owner = true

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Label_Title" type="Label" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("11_semi")
theme_override_font_sizes/font_size = 14
text = "Country"
label_settings = ExtResource("12_title")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxEmpty_0s0um")

[node name="DclLineEdit_Country" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/VBoxContainer3" instance=ExtResource("9_edit")]
unique_name_in_owner = true
layout_mode = 2
character_limit = 40
is_optional = true
hint = "Country"

[node name="DropdownList_Pronouns" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer" instance=ExtResource("8_dd")]
unique_name_in_owner = true
layout_mode = 2
title = "Pronouns"

[node name="DropdownList_Gender" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer" instance=ExtResource("8_dd")]
unique_name_in_owner = true
layout_mode = 2
title = "Gender"

[node name="DropdownList_SexualOrientation" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer" instance=ExtResource("8_dd")]
unique_name_in_owner = true
layout_mode = 2
title = "Sexual Orientation"

[node name="DropdownList_Relationship" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer" instance=ExtResource("8_dd")]
unique_name_in_owner = true
layout_mode = 2
title = "Relationship"

[node name="VBoxContainer4" type="VBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Label_Title" type="Label" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/VBoxContainer4"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("11_semi")
theme_override_font_sizes/font_size = 14
text = "Employment Status"
label_settings = ExtResource("12_title")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/VBoxContainer4"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxEmpty_0s0um")

[node name="DclLineEdit_EmploymentStatus" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/VBoxContainer4" instance=ExtResource("9_edit")]
unique_name_in_owner = true
layout_mode = 2
character_limit = 40
is_optional = true
hint = "Employment Status"

[node name="VBoxContainer5" type="VBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Label_Title" type="Label" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/VBoxContainer5"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("11_semi")
theme_override_font_sizes/font_size = 14
text = "Profession"
label_settings = ExtResource("12_title")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/VBoxContainer5"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxEmpty_0s0um")

[node name="DclLineEdit_Profession" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/VBoxContainer5" instance=ExtResource("9_edit")]
unique_name_in_owner = true
layout_mode = 2
character_limit = 40
is_optional = true
hint = "Profession"

[node name="VBoxContainer6" type="VBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Label_Title" type="Label" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/VBoxContainer6"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("11_semi")
theme_override_font_sizes/font_size = 14
text = "Real Name"
label_settings = ExtResource("12_title")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/VBoxContainer6"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxEmpty_0s0um")

[node name="DclLineEdit_RealName" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/VBoxContainer6" instance=ExtResource("9_edit")]
unique_name_in_owner = true
layout_mode = 2
character_limit = 40
is_optional = true
hint = "Real Name"

[node name="VBoxContainer7" type="VBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Label_Title" type="Label" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/VBoxContainer7"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("11_semi")
theme_override_font_sizes/font_size = 14
text = "Hobby"
label_settings = ExtResource("12_title")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/VBoxContainer7"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxEmpty_0s0um")

[node name="DclLineEdit_Hobby" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/VBoxContainer7" instance=ExtResource("9_edit")]
unique_name_in_owner = true
layout_mode = 2
character_limit = 40
is_optional = true
hint = "Hobby"

[node name="PanelContainer_Footer" type="PanelContainer" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 142)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xwcb6")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer_Footer"]
layout_mode = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 18
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 86

[node name="HBoxContainer_Buttons" type="HBoxContainer" parent="VBoxContainer/PanelContainer_Footer/MarginContainer"]
custom_minimum_size = Vector2(0, 66)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 2

[node name="Button_Cancel" type="Button" parent="VBoxContainer/PanelContainer_Footer/MarginContainer/HBoxContainer_Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme = ExtResource("10_theme")
theme_type_variation = &"SecondaryButton"
theme_override_font_sizes/font_size = 30
text = "CANCEL"
icon_alignment = 2
expand_icon = true

[node name="Button_Save" type="Button" parent="VBoxContainer/PanelContainer_Footer/MarginContainer/HBoxContainer_Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme = ExtResource("10_theme")
theme_override_font_sizes/font_size = 30
text = "SAVE"
icon_alignment = 2
expand_icon = true
